--- a/sample/index.html
+++ b/sample/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
   <div id="body"></div>
-  <script type="text/javascript" src="lib/demo-bundle.js"></script>
+  <script type="text/javascript" src="demo-bundle.js"></script>
 </body>
 </html>
